@@ -1063,6 +1063,9 @@ EXTRA_DIST = \
 	rsnul1nl.ok \
 	rsnulbig.ok \
 	rsnulbig2.ok \
+	rsnulw.awk \
+	rsnulw.in \
+	rsnulw.ok \
 	rsstart1.awk \
 	rsstart1.in \
 	rsstart1.ok \
@@ -1359,8 +1362,8 @@ BASIC_TESTS = \
 	printf1 printfchar prmarscl prmreuse prt1eval prtoeval \
 	rand randtest range1 range2 readbuf rebrackloc rebt8b1 rebuild redfilnm regeq \
 	regexpbrack regexpbrack2 regexprange regrange reindops reparse resplit \
-	rri1 rs rscompat rsnul1nl rsnulbig rsnulbig2 rstest1 rstest2 rstest3 \
-	rstest4 rstest5 rswhite \
+	rri1 rs rscompat rsnul1nl rsnulbig rsnulbig2 rsnulw \
+	rstest1 rstest2 rstest3 rstest4 rstest5 rswhite \
 	scalar sclforin sclifin setrec0 setrec1 \
 	sigpipe1 sortempty sortglos spacere splitargv splitarr \
 	splitdef splitvar splitwht status-close strcat1 strnum1 strnum2 strtod \
