@@ -1,3 +1,8 @@
+2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, rsnulw.
+	* rsnulw.awk, rsnulw.in, rsnulw.ok: New files.
+
 2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (zos-diffout): Change per request from
