@@ -1,3 +1,9 @@
+2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* field.c (re_parse_field): If default parsing and trailing
+	whitespace, don't set a null field at the end. Thanks to
+	Ed Morton <mortoneccc@comcast.net> for the report.
+
 2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* TODO: Add more stuff.
@@ -179,7 +185,7 @@
 2019-11-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* field.c (get_field): Remove special case code for fpat_parse_field.
-	Fixes a bug reported by Ed Morton <mortoneccc@comcast.net.
+	Fixes a bug reported by Ed Morton <mortoneccc@comcast.net>.
 
 2019-10-19         Arnold D. Robbins     <arnold@skeeve.com>
 
